<resources>

    <string name="internship_title_placeholder">Praksa</string>
    <string name="company_name_placeholder">OTP banka</string>
    <string name="internship_applied_label">Prijavljeno</string>
    <string name="placeholder_dash">-</string>


    <string name="app_name">OTP-Student</string>
    <string name="show_password">Prikaži lozinku</string>
    <string name="hide_password">Sakrij lozinku</string>
    <string name="cd_app_logo">OTP Student logo</string>
    <string name="cd_settings">Settings</string>
    <string name="cd_power">Power button</string>
    <string name="welcome_text">Dobrodošli </string>
    <string name="cd_waving_hand">Waving hand</string>
    <string name="btn_set_profile">Postavi profil</string>
    <string name="news_title">Novosti</string>
    <string name="news_package_title">OTP e-Indeks studentski paket</string>
    <string name="news_button_more">Saznajte više</string>
    <string name="cd_news_card">Otvori novost</string>
    <string name="back_button">Natrag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_open_chatbot">Otvori chatbot</string>


    <string name="welcome_back">Dobrodošli natrag!</string>
    <string name="email">Email</string>
    <string name="email_placeholder">Unesi studentsku email adresu…</string>
    <string name="password">Lozinka</string>
    <string name="password_placeholder">Unesi lozinku…</string>
    <string name="login">Prijavi se</string>
    <string name="or_login_other">Ili se prijavi na drugi način</string>
    <string name="login_pin">Prijava PIN-om</string>
    <string name="login_biometric">Prijava otiskom prsta</string>
    <string name="no_account">Još nemaš račun? </string>
    <string name="become_otp_student"> Postani OTPStudent!</string>


    <string name="login_success">Prijava uspješna!</string>
    <string name="success_icon_desc">Ikona uspjeha</string>


    <string name="my_cv">Moj Životopis</string>
    <string name="choose_file_for_upload">Odaberi datoteku za prijenos</string>
    <string name="supported_format_pdf">Podržani format: PDF (do 10MB)</string>
    <string name="choose_file">Odaberi datoteku</string>
    <string name="recent">Nedavno</string>
    <string name="upload_icon_desc">Ikona prijenosa datoteke</string>
    <string name="recent_files">Nedavne datoteke</string>
    <string name="show_more">Prikaži više</string>
    <string name="max_file_size_10mb">Maksimalna veličina datoteke: 10 MB</string>
    <string name="cv_usage_info">Vaš životopis koristit će se za prijave na studentske poslove.</string>
    <string name="empty_state_no_cvs">Još nemate prenesenih životopisa. Prenesite svoj prvi dokument putem gumba iznad.</string>


    <string name="cd_back">Natrag</string>

    <string name="internship_details_title">Detalji prakse</string>
    <string name="internship_field_compensation">Naknada</string>
    <string name="internship_field_location">Lokacija</string>
    <string name="internship_field_duration">Trajanje</string>
    <string name="internship_section_description">Opis prakse</string>
    <string name="internship_section_areas">Područja</string>
    <string name="internship_apply_button">Prijavi se</string>

    <string name="back">Natrag</string>
    <string name="favorite">Favorit</string>

    <!--uredivanje podatki profila-->

    <!-- Općenito -->
    <string name="edit_profile">Uredi profil</string>
    <string name="edit_your_data">Uredi svoje podatke</string>
    <string name="save_changes">Spremi promjene</string>
    <string name="cancel">Odustani</string>

    <!-- Profil -->
    <string name="profile_name_placeholder">OTPStudent</string>
    <string name="profile_data">Podaci o profilu</string>
    <string name="personal_data">Osobni podaci</string>
    <string name="study_data">Podaci o studiju</string>

    <!-- Polja -->
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="phone">Telefon</string>
    <string name="location">Lokacija</string>
    <string name="gender">Spol</string>
    <string name="date_of_birth">Datum rođenja</string>

    <!-- Studij -->
    <string name="faculty">Fakultet</string>
    <string name="major">Smjer</string>
    <string name="education_level">Razina obrazovanja</string>

    <!-- Postavke -->
    <string name="account">Račun</string>
    <string name="change_password">Promijeni lozinku</string>
    <string name="notifications">Obavijesti</string>
    <string name="push_notifications">Push obavijesti</string>
    <string name="security">Sigurnost</string>
    <string name="biometric_login">Biometrijska prijava</string>
    <string name="set_pin">Postavi PIN</string>
    <string name="privacy">Privatnost</string>
    <string name="privacy_policy">Politika privatnosti</string>
    <string name="delete_account">Obriši račun</string>

    <!--Postavi brzu prijavu -->
    <string name="enable_fast_login_title">Omogući brzu prijavu</string>
    <string name="enable_fast_login">Uključite prijavu PIN-om i/ili biometrijom kako bi se ubuduće prijavili brže.</string>
    <string name="enable_fast_login_action">Uključi brzu prijavu</string>
    <string name="remind_me_later">Podsjeti me kasnije</string>

    <!-- ChatBot -->
    <string name="chat_title">Pitaj Ota!</string>
    <string name="chat_history">Povijest razgovora</string>
    <string name="chat_hint">Pitaju Ota...</string>
    <string name="chat_add_symbol">+</string>
    <string name="chat_send_symbol">S</string>

    <!-- ChatBot povijest-->
    <string name="chat_history_title_page">Povijest razgovora</string>
    <string name="chat_history_empty_title">Novi razgovor</string>


    <!--Filter-->
    <string name="filter">Filtriraj</string>

    <string name="chat_preview_user">Kako da se zaposlim u OTP kao student?</string>
    <string name="chat_preview_bot">Tekst Chatbota</string>

    <string name="cd_home">Početna</string>
    <string name="cd_add">Dodaj</string>
    <string name="cd_send">Pošalji</string>
    <string name="points_total">Imaš %1$d bodova</string>

    <!--detalji nagrade-->
    <string name="reward_details_title">Detalji nagrade</string>
    <string name="reward_instructions_title">Kako preuzeti nagradu</string>

    <string name="reward_redeem_button">Preuzmi nagradu</string>

    <string name="reward_cost_points_label">Cijena:</string>
    <string name="reward_cost_points_value">Cijena: %1$d bodova</string>

    <string name="reward_points_ratio">%1$d/%2$d</string>
    <string name="reward_points_missing_default">Nedostaje ti bodova!</string>
    <string name="reward_points_missing">Nedostaje ti %1$d bodova!</string>

    <string name="reward_chip_valid_to">Vrijedi do: %1$s</string>
    <string name="reward_chip_default_type">popust</string>
    <string name="reward_chip_default_uses">jednokratno</string>

    <string name="reward_details_empty">Nema dodatnih detalja za ovu nagradu.</string>
    <string name="reward_instructions_empty">Nema uputa za ovu nagradu.</string>

    <string name="reward_default_store">Nagrada</string>
    <string name="reward_default_reward_type">popust</string>
    <string name="reward_valid_days_fallback">%1$d dana</string>

    <string name="reward_badge_discount">POPUSTA</string>

    <string name="study_year">Godina studija</string>

    <!--Skupljena nagrada-->
    <string name="reward_redeemed_message">Nagrada preuzeta!</string>
    <string name="reward_active_chip">AKTIVNO</string>
    <string name="cd_qr">QR kod</string>
    <string name="qr_code_for_store_purchase">QR kod za kupnju u trgovini</string>
    <string name="code_for_online_purchase">Kod za online kupnju</string>
    <string name="copy">Kopiraj</string>

    <!--Poslovi-->
    <string name="jobs_applicants_count">%1$d studenata</string>
    <string name="jobs_status_applied">Prijavljeno</string>
    <string name="jobs_status_soon_expiring">Uskoro ističe</string>
    <string name="jobs_favourite">Favorit</string>
    <string name="job_details_screen_title">Detalji posla</string>
    <string name="job_details_business_area_label">Poslovno područje:</string>
    <string name="job_details_workplace_label">Mjesto rada:</string>
    <string name="job_details_contract_period_label">Razdoblje primjene ugovora o radu:</string>
    <string name="job_details_deadline_label">Rok za prijavu:</string>
    <string name="job_details_qualifications_label">Potrebne kvalifikacije</string>
    <string name="job_details_apply">Prijavi posao</string>
    <string name="job_details_add_favorite">Dodaj u favorite</string>
    <string name="job_details_remove_favorite">Makni iz favorita</string>

    <string name="internship_list_title">Praksa u IT sektoru</string>
    <string name="internship_filter">Filtriraj</string>
    <string name="internship_my_applications">Moje prijave</string>
    <string name="internship_search_hint">Pretraži prakse...</string>
    <string name="internship_details_user_role">FOI student</string>

    <string name="internship_study_direction">Smjer studija</string>
    <string name="internship_mentor">Mentor</string>
    <string name="internship_start_date">Datum početka prakse</string>
    <string name="internship_end_date">Datum završetka prakse</string>

    <string name="internship_details_button_apply">Prijavi praksu</string>
    <string name="internship_details_button_details">Detalji prakse</string>

    <string name="internship_add_favorite">Dodaj u favorite</string>
    <string name="internship_remove_favorite">Ukloni iz favorita</string>

    <string name="internship_cv_title">Priloženi životopis</string>
    <string name="cv_uploader_default">Student</string>

    <string name="placeholder_user_name">Student</string>
    <string name="error_missing_internship_id">Greška: ID prakse nije pronađen.</string>


    <string name="internship_status_applied">Prijavljeno</string>
    <string name="internship_status_soon_expiring">Uskoro ističe</string>

    <string name="internship_empty_list">Trenutno nema dostupnih praksi.</string>
    <string name="internship_applicants_count">%1$d studenata</string>

    <string name="internship_completed_title">Obavljena praksa</string>
    <string name="not_implemented_yet">Nije implementirano.</string>
    <string name="mentorship_card_title">Mentorstvo za završni rad</string>
    <string name="otp_internship_card_title">Praksa u OTP banci</string>
    <string name="learn_more">Saznaj više</string>
    <string name="empty_list">Nema rezultata.</string>

    <string name="mentorship_request_title">Zamolba za mentorstvo</string>
    <string name="mentorship_send_request">Pošalji zahtjev</string>
    <string name="mentorship_study_hint">Unesite smjer studija</string>
    <string name="mentorship_mentor_hint">Odaberite mentora</string>

    <string name="mentorship_fill_required">Molimo ispunite obavezna polja.</string>
    <string name="mentorship_request_sent">Zahtjev je predan.</string>

    <string name="profile_finish_setup_toast">Molimo dovršite s postavljanjem profila</string>
    <string name="error_link_not_available">Link nije dostupan.</string>
    <string name="error_cannot_open_link">Ne mogu otvoriti link.</string>

    <string name="terms_privacy">Uvjeti o privatnosti</string>

    <!--image description-->
    <string name="search_icon">Ikona pretraživanja</string>

    <string name="mentorship_topic_description_hint">Opis teme...</string>
    <string name="mentorship_topic_description">Opis teme</string>

    <string name="internship_go_to_foi">Odvedi me na FOI prakse</string>

    <string name="internship_description">Opis prakse</string>

    <string name="jobs_expires_at_inline">Traje do %1$s</string>

    <string name="internship_favorites">Favoriti</string>
    <string name="internship_applications_short">Prijave</string>

</resources>
