<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/headerChatbot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="@dimen/header_padding_horizontal"
    android:paddingEnd="@dimen/header_padding_horizontal"
    android:paddingTop="@dimen/header_padding_top"
    android:paddingBottom="@dimen/header_padding_bottom">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/header_icon_size"
        android:layout_height="@dimen/header_icon_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_back"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/otp_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_logo_height"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_app_logo"
        android:src="@drawable/otp_student_logo"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnHome"
        android:layout_width="@dimen/header_icon_size"
        android:layout_height="@dimen/header_icon_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_home"
        app:srcCompat="@drawable/ic_home"
        app:tint="@color/otp_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
