<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomBar"
    style="@style/Widget.OTPStudent.Chat.InputBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/screen_padding"
    android:paddingEnd="@dimen/screen_padding"
    android:paddingTop="@dimen/chat_input_padding_vertical"
    android:paddingBottom="@dimen/chat_input_padding_vertical">

    <!-- ADD -->

    <!-- INPUT -->
    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/chat_icon_btn_size"
        android:layout_height="@dimen/chat_icon_btn_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_add"
        android:src="@drawable/vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/otp_green_dark" />

    <EditText
        android:id="@+id/etMessage"
        style="@style/Widget.OTPStudent.Chat.Input"
        android:layout_width="0dp"
        android:layout_height="@dimen/chat_input_height"
        android:layout_marginStart="@dimen/chat_input_gap"
        android:layout_marginEnd="@dimen/chat_input_gap"
        android:hint="@string/chat_hint"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@id/btnAdd"
        app:layout_constraintEnd_toStartOf="@id/btnSend"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd" />

    <!-- SEND -->
    <ImageButton
        android:id="@+id/btnSend"
        android:layout_width="@dimen/chat_icon_btn_size"
        android:layout_height="@dimen/chat_icon_btn_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_send"
        android:src="@drawable/ic_send"
        app:tint="@color/otp_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>
