<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="ui.internship.InternshipFragment">

    <include
        android:id="@+id/header"
        layout="@layout/view_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- WRAPPER ZA CONTENT -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--SEARCH-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layoutSearch"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="12dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/otp_green"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="@id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- ICON CONTAINER -->
                <FrameLayout
                    android:id="@+id/iconContainer"
                    android:layout_width="48dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/ivSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:src="@drawable/ic_search"
                        android:contentDescription="@string/search_icon"
                        />
                </FrameLayout>

                <!-- INPUT CONTAINER -->
                <FrameLayout
                    android:id="@+id/searchContainer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toEndOf="@id/iconContainer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/internship_search_hint"
                        android:inputType="text"
                        android:paddingHorizontal="12dp"
                        android:singleLine="true"
                        android:autofillHints="" />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>



        <!-- FILTER ROW -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filterRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/layoutSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Filter i moje prijave -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFilter"
                style="@style/FilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:drawableLeft="@drawable/ic_filter"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingHorizontal="14dp"
                android:paddingVertical="5dp"
                android:text="@string/filter"
                app:layout_constraintBaseline_toBaselineOf="@id/btnMyApplications"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/btnMyApplications"
                style="@style/PodnaslovInterakcija"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/internship_my_applications"
                app:drawableTint="@color/otp_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:drawableStart="@drawable/ic_history" />

            <TextView
                android:id="@+id/tvActiveFilters"
                style="@style/Tekst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/otp_grey"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@id/btnFilter"
                app:layout_constraintEnd_toStartOf="@id/btnMyApplications"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- LISTA -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInternships"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/filterRow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- EMPTY -->
        <TextView
            android:id="@+id/tvEmpty"
            style="@style/Podnaslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/internship_empty_list"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/filterRow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
